--- a/css/container.css
+++ b/css/container.css
@@ -1,5 +1,16 @@
-.container_Sidebar {
-    width: 100px;
+.header {
+    vertical-align: middle;
+    text-align: center;
+    height: 80px;
+    background-color: deeppink;
+    color: white;
+    font-size: 30px;
+    border: solid;
+    margin-bottom: 5px;
+}
+
+.class_container_Sidebar {
+    width: 120px;
     height: 500px;
     background-color:#c0c0c0;
     color: white;
@@ -15,20 +26,13 @@
     padding: 5px;
 }
 
-.container_Main {
+.class_container_Main {
     height: 500px;
     background-color: #c0c0c0;
     text-align: center;
     color: white;
     font-size: 50px;
     border: solid;
-}
-
-.container_show {
-    visibility: hidden;
-    height: 500px;
-    text-align: center;
-    background-color: #3e8f3e;
 }
 
 .footer {
