--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,19 @@
-.header {
-    vertical-align: middle;
-    text-align: center;
-    height: 80px;
-    background-color: deeppink;
-    color: white;
-    font-size: 30px;
-    border: solid;
-    margin-bottom: 5px;
-
-}
 .button_img {
     width: 100px;
     height: 30px;
+}
+
+.class_timetable_element {
+    height: 70px;
+    border: solid;
+    margin-top: 5px;
+    margin-left: 5px; /* warum rutschts nicht rein? */
+}
+
+.class_timetable_element_image {
+    width: 50px;
+    height: 50px;
+    margin-outside: 5px;
 }
 
 body {
