--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@
     margin-bottom: 5px;
 }
 
+.container {
+    padding: 0px;
+}
+
 .sidebar {
     height: 500px;
     background-color:#c0c0c0;
@@ -77,6 +81,7 @@
 
 body {
     background-color: grey;
+    padding: 0px;
 }
 
 @media only screen and (max-width: 500px) {
