--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,26 @@
 .header {
     vertical-align: middle;
     text-align: center;
-    height: 80px;
+    height: 40px;
     background-color: deeppink;
     color: white;
     font-size: 30px;
-    border: solid;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+}
+
+.shadow {
+    -moz-box-shadow:    3px 3px 5px 0px #444444;
+    -webkit-box-shadow: 3px 3px 5px 0px #444444;
+    box-shadow:         3px 3px 5px 0px #444444;
 }
 
 .container {
     padding: 0px;
 }
 
-.sidebar {
-    height: 500px;
-    background-color:#c0c0c0;
-    color: white;
-    border: solid;
+.topNav {
+    height: 59px;
+    margin-bottom: 15px;
 }
 
 .btn_side {
@@ -30,16 +33,15 @@
     text-align: center;
     color: white;
     font-size: 50px;
-    border: solid;
+    margin-bottom: 15px;
 }
 
-.nav {
+.footer {
     height: 60px;
     background-color: deeppink;
     font-size: 20px;
     color: white;
-    border: solid;
-    margin-top: 5px;
+    margin-bottom: 15px;
 }
 .button_img {
     width: 100px;
