--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     background-color: deeppink;
     color: white;
     font-size: 30px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .shadow {
@@ -20,7 +20,7 @@
 
 .topNav {
     height: 59px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .btn_side {
@@ -36,15 +36,16 @@
     text-align: center;
     color: white;
     font-size: 50px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .footer {
-    height: 60px;
+    height: 40px;
+    text-align: center;
     background-color: deeppink;
     font-size: 20px;
     color: white;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 .button_img {
     width: 100px;
