--- a/css/styles.css
+++ b/css/styles.css
@@ -2,16 +2,17 @@
     vertical-align: middle;
     text-align: center;
     height: 40px;
-    background-color: deeppink;
+    background-color: darkslateblue;
     color: white;
     font-size: 30px;
     margin-bottom: 10px;
+    margin-top: 5px;
 }
 
-.shadow {
-    -moz-box-shadow:    3px 3px 5px 0px #444444;
-    -webkit-box-shadow: 3px 3px 5px 0px #444444;
-    box-shadow:         3px 3px 5px 0px #444444;
+.shadow1 {
+    -moz-box-shadow:    0px 3px 5px 0px #444444;
+    -webkit-box-shadow: 0px 3px 5px 0px #444444;
+    box-shadow:         0px 3px 5px 0px #444444;
 }
 
 .container {
@@ -31,7 +32,7 @@
 }
 
 .main {
-    height: 500px;
+    height: 350px;
     background-color: #c0c0c0;
     text-align: center;
     color: white;
@@ -42,7 +43,7 @@
 .footer {
     height: 40px;
     text-align: center;
-    background-color: deeppink;
+    background-color: darkslateblue;
     font-size: 20px;
     color: white;
     margin-bottom: 10px;
@@ -90,7 +91,7 @@
 }
 
 body {
-    background-color: grey;
+    background-color: darkgrey;
     padding: 0px;
 }
 
