--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 .header {
-    vertical-align: middle;
     text-align: center;
-    height: 40px;
+    height: 45px;
     background-color: darkslateblue;
     color: white;
     font-size: 30px;
@@ -24,7 +23,7 @@
     margin-bottom: 10px;
 }
 
-.btn_side {
+.btn_nav {
     padding: 0px;
     font-size: 25px;
     font-weight: bold;
@@ -33,16 +32,18 @@
 
 .main {
     height: auto;
-    background-color: #c0c0c0;
+    background-color: darkslateblue;
     text-align: center;
     color: white;
     font-size: 50px;
-    margin-bottom: 10px;
+    border-bottom: solid;
+    border-color: lightgrey;
 }
 
 .footer {
     height: 40px;
     text-align: center;
+    horiz-align: center;
     background-color: darkslateblue;
     font-size: 20px;
     color: white;
@@ -55,7 +56,7 @@
 
 .tt_e_right {
     height: 100px;
-    border: solid;
+    border: 1px;
 }
 
 .tt_e_desc {
@@ -86,7 +87,7 @@
 
 .tt_e_img {
     height: 100px;
-    border: solid;
+    border-right: solid;
 }
 
 body {
