--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
 }
 
 .button_img {
-    width: 100px;
+    : 100px;
     height: 30px;
     padding: 10px 0px;
 }
@@ -77,24 +77,22 @@
 
 .tt_e_desc {
     padding-top: 5px;
-    height: 60px;
+    height: 55px;
     font-size: 20px;
     text-align: left;
 
  }
 
 .tt_e_stage {
-    height: 40px;
+    height: 39px;
     border-top: solid;
     font-size: 20px;
-    padding-bottom: 5px;
 }
 
 .tt_e_date {
-    height: 40px;
+    height: 39px;
     border-top: solid;
     font-size: 20px;
-    padding-bottom: 5px;
 }
 
 .tt_e_left {
