--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,13 @@
     padding: 0px;
 }
 
+.map-canvas {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+
 .topNav {
     height: 59px;
     margin-bottom: 10px;
@@ -123,5 +130,7 @@
 body {
     background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") ;
     padding: 0px;
+    height: 100%;
+    margin: 0;
 }
 
