--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,21 @@
-.header {
-    text-align: center;
-    height: 45px;
-    background-color: rgba(118, 117, 120, 0.70);
-    color: white;
-    font-size: 30px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-}
-
-.shadow1 {
-    -moz-box-shadow:    0px 3px 5px 0px #444444;
-    -webkit-box-shadow: 0px 3px 5px 0px #444444;
-    box-shadow:         0px 3px 5px 0px #444444;
-}
-
 .container {
-    padding: 0px;
+    height: 500px;
+    text-align: center;
 }
 
-.map-canvas {
+.container:before {    /* create a full-height inline block pseudo=element */
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
     height: 100%;
-    margin: 0px;
-    padding: 0px;
 }
 
-
-.topNav {
-    height: 59px;
-    margin-bottom: 10px;
+.element {
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
+    font: 16px/1 Arial sans-serif;        /* <-- reset the font property */
 }
 
-.btn_img {
-    padding: 5px;
-}
-
-.menu_item {
-    font-size: 19px;
-}
-
-.menu_icon {
-    margin-right: 5px;
-}
-
-.btn_nav {
-    padding: 0px;
-    font-size: 25px;
-    font-weight: bold;
-
-}
 
 .main {
     text-align: center;
@@ -69,76 +37,6 @@
 
     margin-bottom: 10px;
 }
-
-
-.start {
-    height: 450px;
-    background-color: rgba(118, 117, 120, 0.70);
-
-    
-}
-
-#first{
-    overflow:hidden;
-
-}
-
-.footer {
-    height: 40px;
-    text-align: center;
-    horiz-align: center;
-    background-color: rgba(118, 117, 120, 0.70);
-    font-size: 20px;
-    color: white;
-}
-
-.button_img {
-    : 100px;
-    height: 30px;
-    padding: 10px 0px;
-}
-
-.tt_e_right {
-    border: solid;
-    padding: 0px;
-    margin-bottom: 10px;
-    height: 100px;
-    background-color: rgba(118, 117, 120, 0.70);
-}
-
-.tt_e_desc {
-    padding-top: 5px;
-    height: 55px;
-    font-size: 20px;
-    text-align: left;
-
- }
-
-.tt_e_stage {
-    height: 39px;
-    border-top: solid;
-    font-size: 20px;
-}
-
-.tt_e_date {
-    height: 39px;
-    border-top: solid;
-    font-size: 20px;
-}
-
-.tt_e_left {
-    border: solid;
-    padding: 0px;
-    margin-bottom: 10px;
-    height: 100px;
-    background-color: rgba(118, 117, 120, 0.70);
-}
-
-.tt_e_img {
-    height: 100px;
-
-}
-
 body {
     background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") ;
 
