--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+.container {
+    height: 500px;
+    text-align: center;
+}
+
+.container:before {    /* create a full-height inline block pseudo=element */
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
+    height: 100%;
+}
+
+.element {
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
+    font: 16px/1 Arial sans-serif;        /* <-- reset the font property */
+}
+
+
 .main {
     text-align: center;
     margin-left: auto;
@@ -11,11 +30,12 @@
     text-align: center;
 
 }
+
 .icon_name {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10px;
 
+    margin-bottom: 10px;
 }
 body {
     background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") ;
