--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@
 
 
 body {
-    background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") ;
+    background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") center ;
 
 }
 
