--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@
     margin-bottom: 10px;
 }
 
-/* Styles for countdown */
+/* Styles for countdown.html */
 
 .clocknav {
     background-color: rgba(110, 110, 110, 0.7);
@@ -65,13 +65,19 @@
 }
 
 
+/* styles for map.html */
 
+.wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    height: 700px;
+    width: 500px;
+}
 
 #map-canvas {
     height: 100%;
     width: 100%;
     padding: 0px;
-    margin: 0px;
     display: block;
 }
 
