--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,11 @@
 .container {
     height: 500px;
-    text-align: center;
+    text-align: center;,
 }
 
-.container:before {    /* create a full-height inline block pseudo=element */
-    content: ' ';
+.container:before {
     display: inline-block;
-    vertical-align: middle;  /* vertical alignment of the inline element */
+    vertical-align: middle;
     height: 100%;
 }
 
@@ -72,6 +71,7 @@
     margin-right: auto;
     height: 700px;
     width: 500px;
+    margin-bottom: 50px;
 }
 
 #map-canvas {
@@ -79,6 +79,14 @@
     width: 100%;
     padding: 0px;
     display: block;
+}
+
+/* styles for info.html*/
+.content-info {
+    height: 500px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
