--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,6 @@
     font-size: 18px;
     text-align: left;
     margin-bottom: 5px;
-}
-
-.clocknav {
     padding: 5px;
 }
 
@@ -87,6 +84,11 @@
     width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.btn_infohtml {
+    height: 35px;
+    margin-bottom: 10px;
 }
 
 
