--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@
 /* styles for info.html*/
 .content-info {
     height: 500px;
-    width: 500px;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
 }
