--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,8 @@
 .wrapper {
     margin-left: auto;
     margin-right: auto;
-    height: 700px;
-    width: 500px;
+    height: 400px;
+    width: auto;
     margin-bottom: 50px;
 }
 
