--- a/css/styles.css
+++ b/css/styles.css
@@ -63,15 +63,12 @@
 
 /* styles for map.html */
 
-.wrapper {
-    margin-left: auto;
-    margin-right: auto;
+.maps_container {
     height: 400px;
     width: auto;
-    margin-bottom: 50px;
-}
-
-.first {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 
 }
 
@@ -90,7 +87,13 @@
 }
 
 
+
+
+
 body {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
    background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") center ;
 }
 
