--- a/css/styles.css
+++ b/css/styles.css
@@ -95,8 +95,6 @@
     background-color: rgba(201, 201, 201, 0.7);
 }
 
-
-
 #grow input:checked {color:red;}
 
 #social_btn:hover{color:#000000;}
@@ -111,8 +109,17 @@
     overflow: hidden;
 }
 
+.show {
+    display: none;
+}
 
+a.hide:focus + .show {
+    display: inline;
+}
 
+a.hide:focus {
+    display: none;
+}
 
 
 
