--- a/css/tmp.css
+++ b/css/tmp.css
@@ -1,17 +1,91 @@
-.acc-demo-3 {
-    height:40px;
+.accordion {
+    width:830px;
+    overflow:hidden;
+    margin:10px auto;
+    color:#474747;
+    background:#414141;
     padding:10px;
-    -webkit-transition:0.4s height, 0.4s padding;
-    -moz-transition:0.4s height, 0.4s padding;
-    -ms-transition:0.4s height, 0.4s padding;
-    transition:0.4s height, 0.4s padding;
 }
-.acc-demo-3.hidden {
-    height:0px;
-    padding:0px 10px;
-    visibility:hidden;
-    -webkit-transition:0.7s height, 0.7s padding, 0s visibility 0.7s;
-    -moz-transition:0.7s height, 0.7s padding, 0s visibility 0.7s;
-    -ms-transition:0.7s height, 0.7s padding, 0s visibility 0.7s;
-    transition:0.7s height, 0.7s padding, 0s visibility 0.7s;
+
+.accordion section{
+    float:left;
+    overflow:hidden;
+    color:#333;
+    cursor:pointer;
+    background: #333;
+    margin:3px;
+}
+.accordion section:hover {
+    background:#444;
+}
+
+.accordion section p {
+    display:none;
+}
+
+.accordion section:after{
+    position:relative;
+    font-size:24px;
+    color:#000;
+    font-weight:bold;
+}
+.accordion section:nth-child(1):after{ content:'1'; }
+.accordion section:nth-child(2):after{ content:'2'; }
+.accordion section:nth-child(3):after{ content:'3'; }
+.accordion section:nth-child(4):after{ content:'4'; }
+.accordion section:nth-child(5):after{ content:'5'; }
+
+.accordion section:target {
+    background:#FFF;
+    padding:10px;
+}
+.accordion section:target:hover {
+    background:#FFF;
+}
+.accordion section:target h2 {
+    width:100%;
+}
+.accordion section:target h2 a{
+    color:#333;
+    padding:0;
+}
+.accordion section:target p {
+    display:block;
+}
+.accordion section h2 a{
+    padding:8px 10px;
+    display:block;
+    font-size:16px;
+    font-weight:normal;
+    color:#eee;
+    text-decoration:none;
+}
+
+.vertical section{
+    width:100%;
+    height:40px;
+    -webkit-transition:height 0.2s ease-out;
+    -moz-transition:height 0.2s ease-out;
+    -o-transition:height 0.2s ease-out;
+    transition:height 0.2s ease-out;
+}
+
+/*Set height of the slide*/
+.vertical :target{
+    height:250px;
+    width:97%;
+}
+
+.vertical section h2 {
+    position:relative;
+    left:0;
+    top:-15px;
+}
+/*Set position of the number on the slide*/
+.vertical section:after{
+    top:-60px;
+    left:810px;
+}
+.vertical section:target:after{
+    left:-9999px;
 }
