--- a/css/tmp.css
+++ b/css/tmp.css
@@ -60,15 +60,15 @@
 .vertical section{
     width:100%;
     height:40px;
-    -webkit-transition:height 0.2s ease-out;
-    -moz-transition:height 0.2s ease-out;
-    -o-transition:height 0.2s ease-out;
-    transition:height 0.2s ease-out;
+    -webkit-transition:height 0.3s ease-out;
+    -moz-transition:height 0.3s ease-out;
+    -o-transition:height 0.3s ease-out;
+    transition:height 0.3s ease-out;
 }
 
 /*Set height of the slide*/
 .vertical :target{
-    height: 200px;
+    height: 150px;
     width:100%;
 }
 
@@ -85,3 +85,15 @@
     margin-right: 5px;
 
 }
+
+.btn_row {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.btn_style {
+    width: 100%;
+    height: 35px;
+    background-color: lightgrey;
+}
+
