--- a/css/news.css
+++ b/css/news.css
@@ -3,9 +3,7 @@
     overflow:hidden;
     margin:10px auto;
     color:#474747;
-    background:#414141;
     padding:10px;
-
 }
 
 .accordion section{
@@ -40,6 +38,7 @@
 }
 .accordion section:target h2 {
     width:100%;
+    margin-bottom: 5px;
 }
 .accordion section:target h2 a{
     color:#333;
@@ -51,7 +50,7 @@
 .accordion section h2 a{
     padding:8px 10px;
     display:block;
-    font-size:16px;
+    font-size:20px;
     font-weight:normal;
     color:#eee;
     text-decoration:none;
@@ -59,7 +58,7 @@
 
 .vertical section{
     width:100%;
-    height:40px;
+    height:44px;
     -webkit-transition:height 0.3s ease-out;
     -moz-transition:height 0.3s ease-out;
     -o-transition:height 0.3s ease-out;
@@ -89,11 +88,23 @@
 .btn_row {
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 10px;
 }
 
 .btn_style {
     width: 100%;
     height: 35px;
+    color: #ffffff;
+    background-color: rgba(36,87,162, 1);
+    border: 0px;
+}
+
+.btn_style:hover {
     background-color: lightgrey;
+    color: black;
+}
+
+body {
+    font-size: 18px;
 }
 
