--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,19 @@
 
 /* Styles for countdown.html */
 
-.clocknav {
+.header_back {
     background-color: rgba(110, 110, 110, 0.7);
     font-size: 18px;
     text-align: left;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.header_title {
+    background-color: rgba(110, 110, 110, 0.7);
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
     margin-bottom: 5px;
     padding: 5px;
 }
@@ -94,6 +103,7 @@
     height: 25px;
     background-color: rgba(201, 201, 201, 0.7);
 }
+
 
 
 
