--- a/css/news.css
+++ b/css/news.css
@@ -11,8 +11,8 @@
     overflow:hidden;
     color:#333;
     cursor:pointer;
-    background: #333;
-    margin:3px;
+    background: rgba(51, 51, 51, 0.75);
+    margin:5px;
 }
 .accordion section:hover {
     background:#444;
@@ -67,7 +67,7 @@
 
 /*Set height of the slide*/
 .vertical :target{
-    height: 150px;
+    height: 170px;
     width:100%;
 }
 
