--- a/css/styles.css
+++ b/css/styles.css
@@ -40,22 +40,6 @@
 
 /* Styles for countdown.html */
 
-.header_back {
-    background-color: rgba(110, 110, 110, 0.7);
-    font-size: 18px;
-    text-align: left;
-    margin-bottom: 5px;
-    padding: 5px;
-}
-
-.header_title {
-    background-color: rgba(110, 110, 110, 0.7);
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 5px;
-    padding: 5px;
-}
 
 .clocktext {
     padding-top: 15px;
@@ -95,13 +79,47 @@
     margin-bottom: 10px;
 }
 
-/* styles for news.html */
+/* styles for news.html/following*/
 
 
 #social_btn {
     width: 100%;
     height: 25px;
     background-color: rgba(201, 201, 201, 0.7);
+}
+
+.header_back {
+    background-color: rgba(110, 110, 110, 0.7);
+    font-size: 18px;
+    text-align: left;
+    margin-bottom: 5px;
+    height: 40px;
+    padding: 5px;
+}
+
+.header_title {
+    background-color: rgba(110, 110, 110, 0.7);
+    font-size: 22px;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.faq_text {
+    padding: 5px;
+    font-size: 16px;
+    color: #ffffff;
+    width: auto;
+    text-align: left;
+    background-color: rgba(110, 110, 110, 0.7);
+
+}
+
+hr {
+    background-color: #ffffff;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 
@@ -111,6 +129,6 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-   background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") center ;
+    background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") center ;
 }
 
