--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@
     font-size: 22px;
     color: #ffffff;
     text-align: center;
+    font-style: normal;
     margin-bottom: 5px;
     padding: 5px;
 }
@@ -116,12 +117,16 @@
 }
 
 .collapse{
-    font-size: 24px;
+    padding-left: 5px;
+    text-align: left;
+    font-size: 20px;
+    font-style: normal;
     display:block;
+    color: #ffffff;
     visibility: visible;
-    background-color: rgba(110, 110, 110, 0.7);
-
+    background-color: rgba(51, 51, 51, 0.75);
 }
+
 
 .collapse + input {
     display:none;
@@ -131,14 +136,23 @@
 }
 .collapse + input:checked + * {
     display:block;
-    height:44px;
+    height:auto;
 
 }
-.test{
-    background-color: #ffffff;
+.text_shown{
+    background-color: rgba(110, 110, 110, 0.7);
+    color: #ffffff;
     height:auto;
     margin-bottom: 10px;
     margin-top: -5px;
+    padding: 5px;
+    text-align: justify;
+    font-size: 18px;
+}
+
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 body {
