--- a/css/styles.css
+++ b/css/styles.css
@@ -119,12 +119,15 @@
 .collapse{
     padding-left: 5px;
     text-align: left;
-    font-size: 20px;
+    font-size: 21px;
     font-style: normal;
     display:block;
     color: #ffffff;
     visibility: visible;
     background-color: rgba(51, 51, 51, 0.75);
+    height: 50px;
+    line-height: 50px;
+    margin-bottom: 10px;
 }
 
 
@@ -144,7 +147,7 @@
     color: #ffffff;
     height:auto;
     margin-bottom: 10px;
-    margin-top: -5px;
+    margin-top: -10px;
     padding: 5px;
     text-align: justify;
     font-size: 18px;
