--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@
     color: #ffffff;
     visibility: visible;
     background-color: rgba(51, 51, 51, 0.75);
-    height: 50px;
+    height: auto;
     line-height: 50px;
     margin-bottom: 10px;
 }
