--- a/css/information.css
+++ b/css/information.css
@@ -3,7 +3,7 @@
     overflow:hidden;
     margin:10px auto;
     color:#474747;
-    padding:10px;
+    padding: 10px 20px 10px 10px;
 }
 
 .accordion section{
