--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,11 @@
     height: 90px;
 }
 
+.logo_height:hover {
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+    box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+}
 
 .header_back {
     background-color: rgba(110, 110, 110, 0.7);
