--- a/css/information.css
+++ b/css/information.css
@@ -96,9 +96,18 @@
     height: 35px;
     width: 35px;
     margin-right: 5px;
-
 }
 
+.img_accordion:hover {
+    -webkit-box-shadow: 0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+    -moz-box-shadow:    0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+    box-shadow:         0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+}
+#logo:hover{
+    -webkit-box-shadow: 0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+    -moz-box-shadow:    0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+    box-shadow:         0px 15px 19px 0px rgba(50, 50, 50, 0.36);
+}
 .btn_row {
     margin-left: 15px;
     margin-right: 15px;
