--- a/css/information.css
+++ b/css/information.css
@@ -125,6 +125,9 @@
 .btn_style:hover {
     background-color: lightgrey;
     color: black;
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 1);
+    -moz-box-shadow:    0px 0px 30px 0px rgba(0, 0, 0, 1);
+    box-shadow:         0px 0px 30px 0px rgba(0, 0, 0, 1);
 }
 
 body {
