--- a/css/styles.css
+++ b/css/styles.css
@@ -212,12 +212,26 @@
     width: 30px;
     float: right;
     margin-top: 10px;
-    margin-right: 7px
+    margin-right: 7px;
+}
+
+.artist_img {
+    height: 79px;
+    width: 79px;
+    float: left;
 }
 
 .artist_container {
     height: 80px;
-    border: solid #ffffff;
+    padding:0px;
+    border-bottom: 1px solid #ffffff;
+}
+
+.artist_text {
+    background-color: rgba(110, 110, 110, 0.7);
+    color: #ffffff;
+    background-clip: content-box;
+    padding: 0px 15px 0px 15px;
 }
 
 hr {
