--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,19 @@
     float: right;
 }
 
+.artist_home {
+    background-color: rgba(110, 110, 110, 0.7);
+    color: #ffffff;
+    height: auto;
+    max-height: 400px;
+    margin-bottom: 15px;
+    padding: 5px;
+    text-align: justify;
+    font-size: 18px;
+    margin-top: 5px;
+    overflow: scroll;
+}
+
 .js {
 
 }
