--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,21 @@
 
 /* Styles for countdown.html */
 
+.outer_slide {
+    width: auto;
+    overflow: auto;
+    white-space: nowrap;
+    padding: 0px;
+    margin-top: 150px;
+    margin-bottom: 30px;
+}
+
+.outer_slide li {
+    display: inline-block;
+    vertical-align: bottom;
+    width: auto;
+    white-space: normal;
+}
 
 .clocktext {
     padding-top: 15px;
@@ -301,16 +316,18 @@
 
 /* styles for food.html*/
 
-.outer_slide {
+
+
+.food_slide {
     width: auto;
     overflow: auto;
     white-space: nowrap;
     padding: 0px;
-    margin-top: 150px;
+    margin-top: 5px;
     margin-bottom: 30px;
 }
 
-.outer_slide li {
+.food_slide li {
     display: inline-block;
     vertical-align: bottom;
     width: auto;
@@ -322,6 +339,16 @@
     background-color: rgba(110, 110, 110, 0.7);
     color: #ffffff;
     height: auto;
+}
+
+.food_img {
+    height: 250px;
+}
+
+.food_img:hover {
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+    box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.5);
 }
 
 hr {
