--- a/css/styles.css
+++ b/css/styles.css
@@ -278,8 +278,8 @@
     background-color: rgba(110, 110, 110, 0.7);
     color: #ffffff;
     background-clip: content-box;
-    padding: 0px 15px 0px 15px;
     text-align: center;
+    margin: 0px;
     vertical-align: middle;
     line-height: 80px;
     font-size: 22px;
