--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,7 @@
     margin-right: 7px;
 }
 
-/* styles for artist.html */
+/* styles for artist.html and different artists */
 
 .artist_img {
     height: 79px;
@@ -306,13 +306,24 @@
     padding: 5px;
     text-align: justify;
     font-size: 18px;
-    margin-top: 5px;
     overflow: scroll;
 }
 
-.js {
-
+.artist_social {
+    height: 40px;
+    margin-top: 5px;
+    background-color: rgba(110, 110, 110, 0.7);
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
 }
+
+.artist_soc_btn {
+    height: 30px;
+    width: 30px;
+    margin-top: 5px;
+    margin-right: 25px;
+}
+
 
 /* styles for food.html*/
 
@@ -349,6 +360,11 @@
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.5);
     box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+}
+
+@font-face {
+    font-family: elfFont;
+    src: url(../fonts/Exo-DemiBold-Italic.otf);
 }
 
 hr {
