--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@
 
 
 .content-info {
-    height: 500px;
+    height: auto;
     width: auto;
     margin-left: auto;
     margin-right: auto;
@@ -328,15 +328,17 @@
 
 
 .food_img {
-    height: 160px;
+    height: 180px;
     color: #ffffff;
     background-color: rgba(110, 110, 110, 0.7);
     margin-top: 5px;
     position: relative;
     padding: 0px;
+    border: 1px solid #ffffff;
 }
 
 .food_img:hover {
+    background-color: rgba(42, 42, 42, 0.70);
     -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.5);
     box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.5);
@@ -352,15 +354,22 @@
 }
 
 .merch_text {
-    height: 30px;
+    height: auto;
     width: 100%;
     font-family: elfFont;
     color: #ffffff;
-    background-color: blue;
     position: absolute;
-    bottom: 0;
-    line-height: 30px;
+    margin-top: 5px;
+    border-top: 1px solid #ffffff;
+
 }
+
+.merch_img{
+    margin-top: 5px;
+    height: 100px;
+    width: auto;
+}
+
 
 @font-face {
     font-family: elfFont;
