--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,8 @@
     overflow: auto;
     white-space: nowrap;
     padding: 0px;
-    margin-top: 150px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .outer_slide li {
@@ -127,7 +127,7 @@
 }
 
 .gallery_height {
-    height: 150px;
+    height: 300px;
 }
 
 .clockbox {
@@ -175,6 +175,9 @@
     background-color: rgba(110, 110, 110, 0.7);
     color: #ffffff;
     text-align: center;
+    font-family: elfFont;
+    line-height: 40px;
+    font-size: 25px
 }
 
 .header_div:hover {
