image slider, gallery test

--- a/css/styles.css
+++ b/css/styles.css
@@ -446,6 +446,23 @@
 }
 
 
+ul {
+    padding:0 0 0 0;
+    margin:0 0 0 0;
+}
+ul li {
+    list-style:none;
+    margin-bottom:25px;
+}
+ul li img {
+    cursor: pointer;
+}
+
+
+
+
+
+
 @font-face {
     font-family: elfFont;
     src: url(../fonts/Exo-DemiBold-Italic.otf);
