--- a/css/styles.css
+++ b/css/styles.css
@@ -100,17 +100,46 @@
 
 /* styles for timetable*/
 
-.timetable_nav {
-    background-color: rgba(201, 201, 201, 0.7);
+.tt_tab {
+    text-decoration: none;
+    color: #ffffff;
 }
 
-.timetable_element {
-    border-radius: 0 4px 0 0;
-
+.row_container {
+    height: 100px;
+    background-color: rgba(110, 110, 110, 0.7);
+    color: #ffffff;
+    text-align: left;
+    padding: 0px;
+    margin: 5px 0 0 0 ;
 }
 
-.timetable_element:hover {
+.row_container:hover {
     background-color: rgba(42, 42, 42, 0.70);
+}
+
+.a_img {
+    height: 100px;
+    float: left;
+    margin-right: 10px;
+}
+
+.a_name {
+    height: 45px;
+    line-height: 45px;
+    font-family: elfFont;
+    font-size: 25px;
+}
+
+.a_hr {
+    margin: -5px 5px 5px 0px;
+
+}
+
+.a_info {
+    height: 25px;
+    line-height: 25px;
+    font-size: 18px;
 }
 
 /* Styles for countdown.html */
