--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,11 @@
     padding: 0px;
     margin: 0px -3px 0px 0px;
     border: 2px solid #808080;
-    border-radius: 7px;
+    border-radius: 0px;
+}
+
+.nav-pills>li>a {
+    border-radius: 0px;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
@@ -184,7 +188,7 @@
 }
 
 .a_hr {
-    margin: -5px 5px 5px 0px;
+    margin: -5px 10px 5px 0px;
 
 }
 
