--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@
 
 .pill {
     padding: 0px;
-    margin: 0px -3px 0px 0px;
+    margin: 0px -2px 0px 0px;
     border: 2px solid #808080;
     border-radius: 0px;
 }
@@ -152,6 +152,13 @@
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
     background-color: rgba(36, 87, 162, 1);
+}
+
+.options {
+    background-color: rgba(110, 110, 110, 0.7);
+    border-radius: 0px;
+
+
 }
 
 .tt_tab {
@@ -197,6 +204,8 @@
     line-height: 25px;
     font-size: 18px;
 }
+
+/* */
 
 /* Styles for countdown.html */
 
