--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,9 @@
 .options {
     background-color: rgba(110, 110, 110, 0.7);
     border-radius: 0px;
+    padding: 5px;
+    height: 50px;
+    width: 100%
 
 
 }
@@ -268,26 +271,25 @@
     height: 30px;
     width: 86px;
     float: left;
-    margin: 5px -86px 0px 5px;
+    margin: 10px -50px 0px 10px;
 }
 
 .header_arrow_home {
     height: 30px;
     width: 152px;
     float: left;
-    margin-top: 5px;
-    margin-left: 5px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 .header_div {
-
-    height: 40px;
+    height: 50px;
     margin-bottom: 5px;
     background-color: rgba(110, 110, 110, 0.7);
     color: #ffffff;
     text-align: center;
     font-family: elfFont;
-    line-height: 40px;
+    line-height: 50px;
     font-size: 25px
 }
 
