--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@
     border: solid;
 }
 
-
 .content-info {
     height: auto;
     width: auto;
@@ -75,10 +74,8 @@
     margin-right: auto;
     padding: 5px;
     text-align: center;
-    padding: 5px;
     color: #ffffff
 }
-
 
 #text {
     font-size: 25px;
@@ -98,13 +95,11 @@
     margin-bottom: 10px;
 }
 
-
-
 /* styles for timetable*/
 
 .tt_info {
     background-color: rgba(110, 110, 110, 0.7);
-    margin: 10px 10px 0px 10px;
+    margin: 10px 10px 0 10px;
 }
 
 .tt_info:hover {
@@ -113,8 +108,8 @@
 
 .tt_row {
     color: #ffffff;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 .tt_element {
@@ -141,14 +136,14 @@
 /* styles for timetable_artists*/
 
 .pill {
-    padding: 0px;
-    margin: 0px -2px 0px 0px;
+    padding: 0;
+    margin: 0 -2px 0 0;
     border: 2px solid #808080;
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 .nav-pills>li>a {
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
@@ -157,12 +152,10 @@
 
 .options {
     background-color: rgba(110, 110, 110, 0.7);
-    border-radius: 0px;
+    border-radius: 0;
     padding: 5px;
     height: 50px;
     width: 100%
-
-
 }
 
 .tt_tab {
@@ -177,7 +170,7 @@
     background-color: rgba(110, 110, 110, 0.7);
     color: #ffffff;
     text-align: left;
-    padding: 0px;
+    padding: 0;
     margin: 5px 0 0 0 ;
 }
 
@@ -199,8 +192,7 @@
 }
 
 .a_hr {
-    margin: -5px 10px 5px 0px;
-
+    margin: -5px 10px 5px 0;
 }
 
 .a_info {
@@ -210,15 +202,61 @@
 }
 
 .tt-modal-dialog {
-    margin: 100px auto 0px auto;
+    margin: 100px auto 0 auto;
     height: 200px;
     width: 200px;
 }
 
 .tt-modal-content {
     background-color: rgba(110, 110, 110, 1);
-    border-radius: 0px;
+    border-radius: 0;
 }
+
+/* styles for timetable_stages*/
+
+.stage_row {
+    padding: 0;
+    margin: 0 0 10px 0;
+}
+
+.stage_img {
+    padding: 0;
+}
+
+.stage_text {
+    height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+    font-family: elfFont;
+    background-color: rgba(110, 110, 110, 0.7);
+}
+
+.r_img {
+
+
+}
+
+.stage_row:hover .stage_img {
+    -webkit-animation:diff1 0.3s linear;
+    -moz-animation:diff1 0.3s linear ;
+    animation:diff1 0.3s linear ;
+
+}
+
+.stage_row:hover .stage_text {
+    -webkit-animation:diff2 0.3s linear ;
+    -moz-animation:diff2 0.3s linear ;
+    animation:diff2 0.3s linear ;
+
+}
+
+@-moz-keyframes diff1 { 100% { -moz-transform: translate(300px, 0); } }
+@-webkit-keyframes diff1 { 100% { -webkit-transform: translate(300px, 0); } }
+@keyframes diff1 { 100% { -webkit-transform: translate(300px, 0); transform: translate(300px, 0); } }
+
+@-moz-keyframes diff2 { 100% { -moz-transform: translate(-300px, 0); } }
+@-webkit-keyframes diff2 { 100% { -webkit-transform: translate(-300px, 0); } }
+@keyframes diff2 { 100% { -webkit-transform: translate(-300px, 0); transform: translate(-300px, 0); } }
 
 /* styles for information.html/following and information.css*/
 
@@ -233,16 +271,16 @@
 }
 
 .logo_height:hover {
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow:    0px 0px 12px 0px rgba(0, 0, 0, 0.5);
-    box-shadow:         0px 0px 12px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.5);
 }
 
 .header_arrow_back {
     height: 30px;
     width: 86px;
     float: left;
-    margin: 10px -50px 0px 10px;
+    margin: 10px -50px 0 10px;
 }
 
 .header_arrow_home {
@@ -357,7 +395,7 @@
 
 .artist_container {
     height: 80px;
-    padding:0px;
+    padding:0;
     border-bottom: 1px solid #ffffff;
 }
 
@@ -366,7 +404,7 @@
     color: #ffffff;
     background-clip: content-box;
     text-align: center;
-    margin: 0px;
+    margin: 0;
     vertical-align: middle;
     line-height: 80px;
     font-size: 20px;
@@ -446,8 +484,8 @@
 .row_style {
     height: 140px;
     background-color: rgba(110, 110, 110, 0.7);
-    padding: 0px;
-    margin: 10px 0px 0px 0px;
+    padding: 0;
+    margin: 10px 0 0 0;
 }
 
 .row_style:hover {
@@ -464,14 +502,14 @@
 }
 
 @-webkit-keyframes shopping {
-    0%   {left:0px;}
+    0%   {left:0;}
     50%  {left:100px;}
-    100% {left:0px;}
+    100% {left:0;}
 }
 @keyframes shopping {
-    0%   {left:0px;}
+    0%   {left:0;}
     50%  {left:200px;}
-    100% {left:0px;}
+    100% {left:0;}
 }
 
 /* animation for hourglass turning */
@@ -527,7 +565,7 @@
     background-color: rgba(110, 110, 110, 0.7);
     margin-top: 5px;
     position: relative;
-    padding: 0px;
+    padding: 0;
     border: 1px solid #ffffff;
 }
 
@@ -577,7 +615,7 @@
 /* Styles for countdown.html */
 
 .numbers {
-    padding: 0px;
+    padding: 0;
     text-align: center;
     font-family: elfFont;
     font-size: 38px;
@@ -645,8 +683,8 @@ hr {
 
 body {
     height: 100%;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     background: linear-gradient( rgba(33,42,82,0.7), rgba(36,87,162,0.7)),  url("../img/background.png") center ;
 }
 
