--- a/css/styles.css
+++ b/css/styles.css
@@ -621,7 +621,7 @@
     background-color: rgba(42, 42, 42, 0.70);
 }
 
-/* Styles for countdown.html */
+/* Styles for offlinemap.html */
 
 .numbers {
     padding: 0;
