--- a/css/hammer.css
+++ b/css/hammer.css
@@ -1,32 +1,6 @@
-body, html {
-    width:100%;
-    height:100%;
-}
-
-.wrapper {
-    width:100%;
-    height:50%;
-    position: relative;
-    display: table;
+#myElement {
+    background: silver;
+    height: 300px;
     text-align: center;
-}
-
-.wrap {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-#square {
-    width:200px;
-    height:200px;
-    background:blue;
-    margin:0 auto;
-}
-
-#circle {
-    border-radius:200px;
-    width:200px;
-    height:200px;
-    background:red;
-    margin:0 auto;
+    font: 30px/300px Helvetica, Arial, sans-serif;
 }
