--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,11 +1,12 @@
 /* Farbverlauf von: #212a52 Zu #2457a2
             rgba(33, 42, 82, 1)  zu rgba(36, 87, 162, 1)*/
 
-.container {
+.containerbox {
     height: 100%;
     width: 100%;
     text-align: center;
     margin-top: 50px;
+    overflow: hidden;
 }
 
 
