--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -11,6 +11,7 @@ html, body {
     text-align: center;
 }
 .parent > .child {
+    padding: 20px;
     display: table-cell;
     vertical-align: middle;
 }
