--- a/www/css/hammer.css
+++ b/www/css/hammer.css
@@ -1,6 +1,15 @@
-#myElement {
-    background: silver;
-    height: 300px;
+.polaroid{
     text-align: center;
-    font: 30px/300px Helvetica, Arial, sans-serif;
+    padding: 10px 10px 25px 10px;
+    background: #eee;
+    border: 1px solid #fff;
+    -moz-box-shadow: 0px 2px 15px #333;
+    -webkit-box-shadow:	0px 2px 15px #333;
+    border: 1px solid #dfdfdf;
+    border: 1px solid rgba(96,96,96,0.2);
+    font-family:"damion";
+    font-size:24px;
+    color:#000;
+    padding-bottom:10px;
+    text-shadow:#333;
 }
